--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,4 +2,14 @@
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
+
+<link rel="apple-touch-icon" sizes="76x76" href="/assets/ico/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/ico/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/ico/favicon-16x16.png">
+<link rel="manifest" href="/assets/ico/site.webmanifest">
+<link rel="mask-icon" href="/assets/ico/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#079064">
+<meta name="theme-color" content="#ffffff">
+
+
 <!-- end custom head snippets -->
