--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -157,6 +157,10 @@ body {
   }
 }
 
+.parallax {
+  background-attachment: fixed;
+}
+
 .page__hero {
   position: relative;
   margin-bottom: 2em;
@@ -555,5 +559,91 @@ body {
     @include breakpoint($x-large) {
       padding-right: 0;
     }
+  }
+}
+
+/*
+   Gallery
+   ========================================================================== */
+
+grid-container {
+  display: grid;
+  grid-auto-rows: 250px;
+	grid-auto-flow: dense;
+  grid-gap: 1em;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
+
+.short {
+  grid-row: span 1;
+}
+
+.medium {
+  grid-row: span 2;
+}
+
+.tall {
+  grid-row: span 3;
+}
+
+.wide {
+	grid-column: span 2;
+}
+
+.wide-wide {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+grid-item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3em;
+  font-weight: bold;
+  color: white;
+  border-radius: 4px;
+}
+
+grid-item img {
+    max-width: 100%;
+    vertical-align: middle;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+.gallery_linker {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border-radius: inherit;
+}
+
+@media (max-width: 447px) {
+  .wide {
+    grid-column: span 1;
+  }
+
+  .wide-wide {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+}
+
+@media (min-width: 1200px) {
+  grid-container {
+    grid-template-columns: repeat(3, minmax(250px, 1fr)); /* Set 4 columns for large screens */
+  }
+}
+
+@media (min-width: 1900px) {
+  grid-container {
+    grid-template-columns: repeat(4, minmax(250px, 1fr)); /* Set 4 columns for very large screens */
   }
 }
