--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -566,84 +566,110 @@ body {
    Gallery
    ========================================================================== */
 
-grid-container {
-  display: grid;
-  grid-auto-rows: 250px;
-	grid-auto-flow: dense;
-  grid-gap: 1em;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-}
-
-.short {
-  grid-row: span 1;
-}
-
-.medium {
-  grid-row: span 2;
-}
-
-.tall {
-  grid-row: span 3;
-}
-
-.wide {
-	grid-column: span 2;
-}
-
-.wide-wide {
-  grid-column: span 2;
-  grid-row: span 2;
-}
-
-grid-item {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.3em;
-  font-weight: bold;
-  color: white;
-  border-radius: 4px;
-}
-
-grid-item img {
-    max-width: 100%;
-    vertical-align: middle;
-    display: inline-block;
+   grid-container {
+    display: grid;
+    grid-auto-rows: 250px; /* Keeps fixed row height */
+    grid-auto-flow: dense;
+    grid-gap: 1em;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+  
+  .short {
+    grid-row: span 1;
+  }
+  
+  .medium {
+    grid-row: span 2;
+  }
+  
+  .tall {
+    grid-row: span 3;
+  }
+  
+  .wide {
+    grid-column: span 2;
+  }
+  
+  .wide-wide {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+  
+  grid-item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 4px;
+  }
+  
+  grid-item picture {
+    display: flex; /* Ensures the picture behaves like a block */
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+  
+  grid-item picture img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 4px;
-}
-
-.gallery_linker {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  border-radius: inherit;
-}
-
-@media (max-width: 447px) {
-  .wide {
-    grid-column: span 1;
   }
-
-  .wide-wide {
-    grid-column: span 1;
-    grid-row: span 1;
+  
+  .gallery_linker {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    border-radius: inherit;
   }
-}
-
-@media (min-width: 1200px) {
-  grid-container {
-    grid-template-columns: repeat(3, minmax(250px, 1fr)); /* Set 4 columns for large screens */
+  
+  @media (max-width: 447px) {
+    .wide {
+      grid-column: span 1;
+    }
+  
+    .wide-wide {
+      grid-column: span 1;
+      grid-row: span 1;
+    }
   }
-}
-
-@media (min-width: 1900px) {
-  grid-container {
-    grid-template-columns: repeat(4, minmax(250px, 1fr)); /* Set 4 columns for very large screens */
+  
+  @media (min-width: 1200px) {
+    grid-container {
+      grid-template-columns: repeat(3, minmax(250px, 1fr)); /* Set 3 columns for large screens */
+    }
   }
-}
+  
+  @media (min-width: 1900px) {
+    grid-container {
+      grid-template-columns: repeat(4, minmax(250px, 1fr)); /* Set 4 columns for very large screens */
+    }
+  }
+  
+  .archive {
+    margin-top: 1em;
+    margin-bottom: 2em;
+  }
+  
+  @media (min-width: 64em) {
+    .archive {
+      float: right;
+      width: calc(100% - 200px);
+      padding-right: 200px;
+    }
+  }
+  
+  @media (min-width: 80em) {
+    .archive {
+      width: calc(100% - 300px);
+      padding-right: 300px;
+    }
+  }
+  
