--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -29,7 +29,7 @@
         {% endif %}
       </h1>
       {% if page.header.overlay_spacer %}
-      <div style="margin-top: {{page.header.overlay_spacer}};"></div>
+      <div style="margin-top: {{page.header.overlay_spacer}}"></div>
       {% endif %}
       {% if page.tagline %}
         <p class="page__lead">{{ page.tagline | markdownify | remove: "<p>" | remove: "</p>" }}</p>
